kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector:
    app: vprodb # Selector to match pods with this label
  ports:
    - protocol: TCP
      port: 3306        # Service port
      targetPort: vprodb-port  # Target port on the pod
  type: ClusterIP      # Service type (ClusterIP, NodePort, LoadBalancer, etc.)
